petri/src/main/java/org/dhbw/ka/ml/Petri.jj
options {
    STATIC = false;
}

PARSER_BEGIN(Petri)
package org.dhbw.ka.ml.generated;
public class Petri {
    public static void main(String[] args) throws ParseException {
    }
}
PARSER_END(Petri)



SKIP : {
    " "
|   "\r"
|   "\t"
|   "\n"
}

SPECIAL_TOKEN : {
    < ONE_LINE_COMMENT: "#" (~["\n"])* "\n" >
}

TOKEN : {
    < MESSAGE: "message" >
|   < BOOL: "bool" >
|   < INT: "int" >
|   < FLOAT: "float" >
|   < DOUBLE: "double" >
|   < STRING: "string" >
|   < LIST: "List" >
}

TOKEN : {
    < #DIGIT: ["0"-"9"] >
|   < DIGITS: (<DIGIT>)+ >
|   < #LETTER: ["a"-"z","A"-"Z"] >
|   < #ID_ANY: (<DIGIT>|<LETTER>|"_") >
|   < ID: (("_")+ (<DIGIT>|<LETTER>) (<ID_ANY>)* | <DIGITS> (<LETTER>|"_") (<ID_ANY>)* | <LETTER> (<ID_ANY>)*) >
}

void root():
{
}
{
    complex_types() <EOF>
}

void complex_types():
{}
{
    complex_type() complex_types()
    |
    empty()
}

void complex_type():
{}
{
    message()
}

void message():
{
}
{
    <MESSAGE> <ID> (":" <ID>)? "{" fields() "}"
}

void fields():
{}
{
    field() fields()
    |
    empty()
}

void field():
{}
{
    type_identifier() <ID> "=" <DIGITS> ";"
}

void type_identifier():
{}
{
    primitive_type() // | <ID> | <LIST> "<" type_identifier() ">"
}

void primitive_type():
{}
{
    <BOOL> | <INT> | <FLOAT> | <DOUBLE> | <STRING>
}

JAVACODE
void empty() {
    // skip production
}
